<resources>
    <string name="app_name">Mbts</string>
    <string name="login_form">Login Form</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="pin_number">Pin number</string>
    <string name="password">Password</string>
    <string name="student_details">Student Details</string>
    <string name="pinno">Pinno</string>
    <string name="name">name</string>
    <string name="something">         </string>
    <string name="something1">        </string>
    <string name="department">Department</string>
    <string name="lname">Lname</string>
    <string name="todo">TODO</string>
    <string name="register_page">Register page</string>
    <string name="firstname">FirstName</string>
    <string name="dipartment">Dipartment</string>
    <string name="lastname">LastName</string>
    <string name="dateofbirth">DateOfBirth</string>
    <string name="button">Button</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_btn">continue</string>
</resources>