<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".Dashboard">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="387dp"
        android:layout_height="585dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:shapeAppearanceOverlay="@style/roundedimgview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:text="@string/student_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/pinno"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/name"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:text="Fname"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:text="Lname"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/name3"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:text="DOB"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/pinnoview"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/something"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/pinnoview2"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/something"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/pinnoview3"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:text="@string/something"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/pinnoview4"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="172dp"
        android:text="@string/something"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>